# UBER-PREDICTION

./: app.py  model.pkl  pyproject.toml  taxi.csv
static/: style.css
templates/: index,html
