[project]
name = "uber-project"
version = "0.1.0"
description = "This project is about predictivethe price"
authors = [
    {name = "None"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "flask (>=3.1.3,<4.0.0)"
]

[dependency-groups]
dev = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
